# Simox

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  KdTreePointCloud.h  config.cmake  readme.md  readme.txt
GraspPlanning/: ApproachMovementGenerator.cpp  ApproachMovementGenerator.h  ApproachMovementSurfaceNormal.cpp  ApproachMovementSurfaceNormal.h  CMakeLists.txt  ContactConeGenerator.cpp  ContactConeGenerator.h  ConvexHullGenerator.cpp  ConvexHullGenerator.h  GraspPlanning.h  GraspStudio.h  MeshConverter.cpp  MeshConverter.h
GraspPlanning/GraspPlanner/: GenericGraspPlanner.cpp  GenericGraspPlanner.h  GraspPlanner.cpp  GraspPlanner.h  GraspPlannerEvaluation.cpp  GraspPlannerEvaluation.h
GraspPlanning/GraspQuality/: GraspEvaluationPoseUncertainty.cpp  GraspEvaluationPoseUncertainty.h  GraspQualityMeasure.cpp  GraspQualityMeasure.h  GraspQualityMeasureWrenchSpace.cpp  GraspQualityMeasureWrenchSpace.h  GraspQualityMeasureWrenchSpaceNotNormalized.cpp  GraspQualityMeasureWrenchSpaceNotNormalized.h
GraspPlanning/Visualization/: ConvexHullVisualization.cpp  ConvexHullVisualization.h
GraspPlanning/examples/: CMakeLists.txt
Gui/: AbstractViewer.cpp  AbstractViewer.h  CMakeLists.txt  CameraConfiguration.h  SimoxGuiImportExport.h  ViewerFactory.cpp  ViewerFactory.h  ViewerInterface.h  ViewerSelection.h
Gui/Coin/: CMakeLists.txt  CoinViewer.cpp  CoinViewer.h  CoinViewerFactory.cpp  CoinViewerFactory.h  SoGLHighlightRenderAction.cpp  SoGLHighlightRenderAction.h
Gui/Ogre/: CMakeLists.txt  OgreViewer.cpp  OgreViewer.h  OgreViewerFactory.cpp  OgreViewerFactory.h  OrbitCamera.cpp  OrbitCamera.h
Gui/Qt3D/: Qt3DCustomCameraController.cpp  Qt3DCustomCameraController.h  Qt3DViewer.cpp  Qt3DViewer.h  Qt3DViewerFactory.cpp  Qt3DViewerFactory.h
MotionPlanning/: ApproachDiscretization.cpp  ApproachDiscretization.h  CMakeLists.txt  MotionPlanning.h  Saba.h
MotionPlanning/CSpace/: CSpace.cpp  CSpace.h  CSpaceNode.cpp  CSpaceNode.h  CSpacePath.cpp  CSpacePath.h  CSpaceSampled.cpp  CSpaceSampled.h  CSpaceTree.cpp  CSpaceTree.h  ConfigurationConstraint.cpp  ConfigurationConstraint.h  Sampler.cpp  Sampler.h
MotionPlanning/Planner/: BiRrt.cpp  BiRrt.h  GraspIkRrt.cpp  GraspIkRrt.h  GraspRrt.cpp  GraspRrt.h  MotionPlanner.cpp  MotionPlanner.h  PlanningThread.cpp  PlanningThread.h  Rrt.cpp  Rrt.h
MotionPlanning/PostProcessing/: ElasticBandProcessor.cpp  ElasticBandProcessor.h  PathProcessingThread.cpp  PathProcessingThread.h  PathProcessor.cpp  PathProcessor.h  ShortcutProcessor.cpp  ShortcutProcessor.h
MotionPlanning/Visualization/: RrtWorkspaceVisualization.cpp  RrtWorkspaceVisualization.h
MotionPlanning/examples/: CMakeLists.txt
MotionPlanning/tests/: CMakeLists.txt  SabaCSpaceTest.cpp  SabaShortcutProcessorTest.cpp
SimDynamics/: CMakeLists.txt  DynamicsWorld.cpp  DynamicsWorld.h  SimDynamics.h
SimDynamics/DynamicsEngine/: DynamicsEngine.cpp  DynamicsEngine.h  DynamicsEngineFactory.h  DynamicsObject.cpp  DynamicsObject.h  DynamicsRobot.cpp  DynamicsRobot.h  DynamicsUtils.cpp  DynamicsUtils.h
VirtualRobot/: AbstractFactoryMethod.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  KinematicChain.cpp  KinematicChain.h  LinkedCoordinate.cpp  LinkedCoordinate.h  ManipulationObject.cpp  ManipulationObject.h  MathTools.cpp  MathTools.h  Model.cpp  Model.h  ModelConfig.cpp  ModelConfig.h  ModelFactory.cpp  ModelFactory.h  ModelNodeSet.cpp  ModelNodeSet.h  Obstacle.cpp  Obstacle.h  Primitive.cpp  Primitive.h  Random.cpp  Random.h  Robot.cpp  Robot.h  RobotConfig.cpp  RobotConfig.h  RobotFactory.cpp  RobotFactory.h  RobotNodeSet.cpp  RobotNodeSet.cpp.orig  RobotNodeSet.h  RuntimeEnvironment.cpp  RuntimeEnvironment.h  Scene.cpp  Scene.h  SceneObject.cpp  (+15 more)
VirtualRobot/CollisionDetection/: CDManager.cpp  CDManager.h  CMakeLists.txt  CollisionChecker.cpp  CollisionChecker.h  CollisionCheckerImplementation.h  CollisionModel.cpp  CollisionModel.h  CollisionModelImplementation.h
VirtualRobot/Compression/: CompressionBZip2.cpp  CompressionBZip2.h  CompressionRLE.cpp  CompressionRLE.h
VirtualRobot/DataStructures/: KdTreePointCloud.h  nanoflann.hpp
VirtualRobot/Dynamics/: CMakeLists.txt  Dynamics.cpp  dynamics.cpp  dynamics.h
VirtualRobot/EndEffector/: EndEffector.cpp  EndEffector.h  EndEffectorActor.cpp  EndEffectorActor.h
VirtualRobot/Grasping/: BasicGraspQualityMeasure.cpp  BasicGraspQualityMeasure.h  Grasp.cpp  Grasp.h  GraspSet.cpp  GraspSet.h
VirtualRobot/IK/: AdvancedIKSolver.cpp  AdvancedIKSolver.h  CoMIK.cpp  CoMIK.h  ConstrainedHierarchicalIK.cpp  ConstrainedHierarchicalIK.h  ConstrainedIK.cpp  ConstrainedIK.h  ConstrainedOptimizationIK.cpp  ConstrainedOptimizationIK.h  ConstrainedStackedIK.cpp  ConstrainedStackedIK.h  Constraint.cpp  Constraint.h  DifferentialIK.cpp  DifferentialIK.h  FeetPosture.cpp  FeetPosture.h  GazeIK.cpp  GazeIK.h  GenericIKSolver.cpp  GenericIKSolver.h  HierarchicalIK.cpp  HierarchicalIK.h  HierarchicalIKSolver.cpp  HierarchicalIKSolver.h  IKSolver.cpp  IKSolver.h  JacobiProvider.cpp  JacobiProvider.h  JointLimitAvoidanceJacobi.cpp  JointLimitAvoidanceJacobi.h  PoseQualityExtendedManipulability.cpp  PoseQualityExtendedManipulability.h  PoseQualityManipulability.cpp  PoseQualityManipulability.h  PoseQualityMeasurement.cpp  PoseQualityMeasurement.h  StackedIK.cpp  StackedIK.h  (+2 more)
VirtualRobot/Import/: RobotImporterFactory.cpp  RobotImporterFactory.h  SimoxCOLLADAFactory.cpp  SimoxCOLLADAFactory.h  SimoxXMLFactory.cpp  SimoxXMLFactory.h
VirtualRobot/MJCF/: Document.cpp  Document.h  elements.cpp  elements.h  visitors.h
VirtualRobot/Model/: Coordinate.cpp  Coordinate.h  Frame.cpp  Frame.h  JointSet.cpp  JointSet.h  KinematicChain.cpp  KinematicChain.h  LinkSet.cpp  LinkSet.h  ManipulationObject.cpp  ManipulationObject.h  Model.cpp  Model.h  ModelConfig.cpp  ModelConfig.h  ModelFactory.cpp  ModelFactory.h  ModelNodeSet.cpp  ModelNodeSet.h  ModelSet.cpp  ModelSet.h  Obstacle.cpp  Obstacle.h  Primitive.cpp  Primitive.h
VirtualRobot/Nodes/: CameraSensor.cpp  CameraSensor.h  CameraSensorFactory.cpp  CameraSensorFactory.h  ConditionedLock.h  ContactSensor.cpp  (+47 more)
(+1242 files in other folders)
